# audioipc

./: Cargo.toml
audioipc/: Cargo.toml
audioipc/benches/: serialization.rs
audioipc/src/: codec.rs  ipccore.rs  lib.rs  messages.rs  rpccore.rs
audioipc/src/sys/unix/: cmsg.rs  mod.rs  msg.rs
client/: Cargo.toml
client/src/: context.rs  lib.rs  stream.rs
ipctest/: Cargo.toml
ipctest/src/: client.rs  main.rs
server/: Cargo.toml  cbindgen.toml
server/src/: lib.rs  server.rs
